--- a/apps/client-app/app/globals.css
+++ b/apps/client-app/app/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+body.no-scroll {
+    overflow: hidden;
+}
+
+.custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: white;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 4px;
+  }
+  /* styles.css or your main CSS file */
+
+
+
